cabal-version: 2.4

name:           sawtooth-sdk
version:        0.0.0
build-type:     Simple

library
  exposed-modules:
    Control.Sawtooth.Transaction
    Control.Sawtooth.TransactionProcessor
    System.ZMQ4.Extra
    Control.Monad.Freer.Logger
    Control.Monad.Freer.Time
    Control.Sawtooth.TransactionConstructor
    Control.Monad.Freer.Random
    Data.ByteArray.Encoding.Extra
    Servant.API.Sawtooth
    Servant.API.Protobuf
    Control.Sawtooth.Types
    Control.Monad.Freer.Servant.Client
    Data.ByteString.Sized
    Numeric.Natural.Sized
    Data.Sized
    Control.Sawtooth.Transaction.Array
    Proto3.Suite.Extra
  other-modules:
    Paths_sawtooth_sdk
  hs-source-dirs:
    src
  default-extensions:
    GADTs
    FlexibleContexts
    ScopedTypeVariables
    TypeOperators
    DataKinds
    RankNTypes
    TypeApplications
    LambdaCase
    OverloadedStrings
    DeriveFunctor
    DerivingStrategies
    GeneralizedNewtypeDeriving
    UndecidableInstances
    PatternSynonyms
    ViewPatterns
    KindSignatures
    AllowAmbiguousTypes
    MultiParamTypeClasses
    TypeFamilies
    FunctionalDependencies
    PolyKinds
    TypeFamilyDependencies
    DeriveGeneric
    DeriveAnyClass
    RecordWildCards
    FlexibleInstances
    QuantifiedConstraints
    ConstraintKinds
    MagicHash
    StandaloneDeriving
    DerivingVia
    DuplicateRecordFields
    TupleSections
  build-depends:
      base
    , bytestring
    , containers
    , proto3-suite
    , proto3-wire
    , text
    , vector
    , freer-simple
    , type-level-sets
    , sawtooth-haskell-protos
    , zeromq4-haskell
    , transformers-base
    , time
    , async
    , cryptonite
    , memory
    , colourista
    , uuid
    , lifted-base
    , secp256k1-haskell
    , servant
    , servant-client
    , aeson
    , servant-client-core
    , http-types
    , envy
    , serialise
    , mtl
    , unordered-containers
    , http-media
  default-language: Haskell2010
  ghc-options:
    -threaded
    -Weverything
    -Wno-implicit-prelude
    -Wno-missing-safe-haskell-mode
    -Wno-safe
    -Wno-prepositive-qualified-module
    -Wno-missing-import-lists
    -Wno-partial-fields
    -Wno-all-missed-specialisations
    -Wno-missing-local-signatures
    -Wno-unsafe
